<resources>
    <string name="app_name">King Nothing</string>

    <string name="str_preview_photo_title">This is the photo you captured.</string>
    <string name="str_preview_photo_message">Would you like to take this one?</string>
    <string name="str_user_check_yes">Yes</string>
    <string name="str_user_check_no">No</string>
    <string name="str_user_check_recapture">Recapture</string>

    <string name="str_red">Red</string>
    <string name="str_green">Green</string>
    <string name="str_blue">Blue</string>
    <string name="str_alpha">Alpha</string>
    <string name="str_hex_code">Hex code</string>

    <string name="str_cancel">Cancel</string>
    <string name="str_select">Select</string>

    <string name="str_undo">Undo</string>
    <string name="str_redo">Redo</string>
</resources>
