<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- for previewing -->
    <ImageView
            android:id="@+id/imgv_color_picker_dialog_preview_color"
            android:src="@android:color/black"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    <!-- pick red -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/str_red"
                android:textColor="@color/color_red"
                android:textAlignment="textStart"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_red"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        <TextView
                android:id="@+id/txtv_color_picker_dialog_show_red_value"
                android:text="000"
                android:textColor="@color/color_red"
                android:textAlignment="textEnd"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- pick green -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/str_green"
                android:textColor="@color/color_green"
                android:textAlignment="textStart"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_green"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        <TextView
                android:id="@+id/txtv_color_picker_dialog_show_green_value"
                android:text="000"
                android:textColor="@color/color_green"
                android:textAlignment="textEnd"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- pick blue -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/str_blue"
                android:textColor="@color/color_blue"
                android:textAlignment="textStart"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_blue"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        <TextView
                android:id="@+id/txtv_color_picker_dialog_show_blue_value"
                android:text="000"
                android:textColor="@color/color_blue"
                android:textAlignment="textEnd"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- cancel & select buttons -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!-- cancel button -->
        <Button
                android:id="@+id/btn_color_picker_dialog_cancel"
                android:text="@string/str_cancel"
                android:textAllCaps="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        <!-- select button -->
        <Button
                android:id="@+id/btn_color_picker_dialog_select"
                android:text="@string/str_select"
                android:textAllCaps="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>